# instrument_control_lib

./: .gitignore  .gitmodules  CMakeLists.txt  CommandLineInterfaceDefines_8h.html  CommandLineInterfaceDefines_8h.js  CommandLineInterfaceDefines_8h__dep__incl.map  CommandLineInterfaceDefines_8h__dep__incl.md5  CommandLineInterfaceDefines_8h__incl.map  CommandLineInterfaceDefines_8h__incl.md5  CommandLineInterfaceDefines_8h_source.html  CommandLineInterface_8cpp.html  CommandLineInterface_8cpp.js  CommandLineInterface_8cpp__incl.map  CommandLineInterface_8cpp__incl.md5  CommandLineInterface_8h.html  CommandLineInterface_8h__dep__incl.map  CommandLineInterface_8h__dep__incl.md5  CommandLineInterface_8h__incl.map  CommandLineInterface_8h__incl.md5  CommandLineInterface_8h_source.html  ConfigFileDefines_8h.html  ConfigFileDefines_8h__dep__incl.map  ConfigFileDefines_8h__dep__incl.md5  ConfigFileDefines_8h_source.html  ConfigFileParser_8cpp.html  ConfigFileParser_8cpp__incl.map  ConfigFileParser_8cpp__incl.md5  ConfigFileParser_8h.html  ConfigFileParser_8h__dep__incl.map  ConfigFileParser_8h__dep__incl.md5  ConfigFileParser_8h__incl.map  ConfigFileParser_8h__incl.md5  ConfigFileParser_8h_source.html  DCPowerSupply_8h.html  DCPowerSupply_8h__dep__incl.map  DCPowerSupply_8h__dep__incl.md5  DCPowerSupply_8h__incl.map  DCPowerSupply_8h__incl.md5  DCPowerSupply_8h_source.html  DCPowersupply_8cpp.html  (+689 more)
examples/: CMakeLists.txt  MeasurementBuffering.cpp  SMUBasicUsage.cpp  SmuBuffering.cpp
examples/python/: DC_PWR_example.py  SMU_example.py  basic_usage.py  smu_basic_usage.py  smu_buffering.py
instrument_cmd_tool/: CMakeLists.txt  InstrumentCMDLineTool.cpp
memristor_tester/: CMakeLists.txt  build.sh  main.cpp  measure_chip.cpp  plot.ipynb  threshold.ipynb  utils.cpp  utils.h
memristor_tester/.ipynb_checkpoints/: plot-checkpoint.ipynb  stability_of_resistance_measurement-checkpoint.ipynb
memristor_tester/data/: meta.xml
memristor_tester/data/stability_formal/: stability_formal.ipynb
memristor_tester/data/stability_formal/2_1/0/: 2_1_0.2.csv  2_1_0.4.csv  2_1_0.5.csv  2_1_0.6.csv  2_1_0.7.csv  2_1_1.0.csv  2_1_1.2.csv
memristor_tester/data/stability_formal/2_1/1/: 2_1_0.4.csv  2_1_1.2.csv  2_1_1.5.csv
memristor_tester/data/stability_formal/2_1/2/: 2_1_0.1.csv  2_1_0.2.csv  2_1_0.5.csv  2_1_0.7.csv  2_1_0.9.csv  2_1_1.0.csv  2_1_1.1.csv  2_1_1.2.csv  2_1_1.3.csv  2_1_1.4.csv  2_1_1.5.csv
memristor_tester/data/stability_formal/2_1/3/: 2_1_0.1.csv  2_1_0.2.csv  2_1_0.3.csv  2_1_0.5.csv  2_1_0.9.csv  2_1_1.0.csv  2_1_1.3.csv
memristor_tester/data/stability_formal/2_1/4/: 2_1_0.1.csv  2_1_0.4.csv  2_1_1.3.csv
memristor_tester/data/stability_measurement/: stability_2_16_100  stability_2_16_1200  stability_2_16_800
memristor_tester/data/stability_measurement/measure_2_1_0/: measure_2_1_1099  measure_2_1_1200  measure_2_1_1400  measure_2_1_300  measure_2_1_600  measure_2_1_799  measure_2_1_999
memristor_tester/data/stability_measurement/measure_2_1_1/: measure_2_1_100  measure_2_1_1099  measure_2_1_1300  measure_2_1_300  measure_2_1_400  measure_2_1_500  measure_2_1_600  measure_2_1_700  measure_2_1_799  measure_2_1_899
memristor_tester/data/stability_measurement/measure_2_1_2/: measure_2_1_100  measure_2_1_1200  measure_2_1_1300  measure_2_1_400  measure_2_1_799  measure_2_1_899
memristor_tester/data/stability_measurement/measure_2_1_3/: measure_2_1_1099  measure_2_1_200  measure_2_1_300  measure_2_1_700  measure_2_1_899
memristor_tester/data/stability_measurement/measure_2_1_4/: measure_2_1_100  measure_2_1_1099  measure_2_1_1200  measure_2_1_1300  measure_2_1_1400  measure_2_1_200  measure_2_1_400  measure_2_1_600  measure_2_1_700  measure_2_1_899  measure_2_1_999
memristor_tester/data/stability_measurement/measure_2_1_5/: measure_2_1_100  measure_2_1_1300  measure_2_1_200  measure_2_1_300  measure_2_1_600  measure_2_1_700  measure_2_1_799  measure_2_1_999
memristor_tester/document/aux/: threshold.fls
memristor_tester/example/: basic.cpp
playground/: CMakeLists.txt  HTTPRequest.h  main.cpp  measure_chip.cpp  memristor_tester.cpp  plot_memristor_results.py  test.cpp  test.h
py_icl/: CMakeLists.txt  main.cpp  py_icl_test.py
python_interface/: CMakeLists.txt  README.md  boost_python_wrapper.cpp  instrument_control_lib.py  libpy_instrument_control_lib.py  py_install.bat  py_install.sh  pybind_wrapper.cpp  setup.py  testSMU.py  test_pybind.py
test/: CMakeLists.txt  main.cpp  measure_chip.cpp  parse_meta.cpp  plot.ipynb  stability_of_resistance_measurement.ipynb  threshold.ipynb  utils.cpp  utils.h  utils.ipynb
test/.ipynb_checkpoints/: plot-checkpoint.ipynb  threshold-checkpoint.ipynb  utils-checkpoint.ipynb
test/data/: meta.xml
test/data/stability_formal/: stability_formal.ipynb
test/data/stability_formal/.ipynb_checkpoints/: stability_formal-checkpoint.ipynb
test/data/stability_measurement/: meta.xml  stability_2_16_400  stability_of_resistance_measurement.ipynb
test/data/stability_measurement/measure_2_1_0/: measure_2_1_100  measure_2_1_1300  measure_2_1_200  measure_2_1_400  measure_2_1_500  measure_2_1_700  measure_2_1_899
test/data/stability_measurement/measure_2_1_1/: measure_2_1_1200  measure_2_1_1400  measure_2_1_200  measure_2_1_999
test/data/stability_measurement/measure_2_1_2/: measure_2_1_1099  measure_2_1_1400  measure_2_1_200  measure_2_1_300  measure_2_1_500  measure_2_1_600  measure_2_1_700  measure_2_1_999
test/data/stability_measurement/measure_2_1_3/: measure_2_1_100  measure_2_1_1200  measure_2_1_1300  measure_2_1_1400  measure_2_1_400  measure_2_1_500  measure_2_1_600  measure_2_1_799  measure_2_1_999
test/data/stability_measurement/measure_2_1_4/: measure_2_1_300  measure_2_1_500  measure_2_1_799
test/data/stability_measurement/measure_2_1_5/: measure_2_1_1099  measure_2_1_1200  measure_2_1_1400  measure_2_1_400  measure_2_1_500  measure_2_1_899
test/document/: __latexindent_temp.tex
test/document/aux/: threshold.aux  threshold.fdb_latexmk
test/example/: basic.cpp
tests/: CMakeLists.txt  DeviceTest.cpp
(+2257 files in other folders)
